update ignite branding to jhipster

--- a/generators/app/templates/app/config/reactotron-config.js.ejs
+++ b/generators/app/templates/app/config/reactotron-config.js.ejs
@@ -10,7 +10,7 @@ if (Config.useReactotron) {
   Reactotron
     .configure({
       // host: '10.0.3.2' // default is localhost (on android don't forget to `adb reverse tcp:9090 tcp:9090`)
-      name: 'Ignite JHipster App' // would you like to see your app's name?,
+      name: 'JHipster React Native App' // would you like to see your app's name?,
     })
     .setAsyncStorageHandler(AsyncStorage)
     .useReactNative({ asyncStorage: false })
