--- a/generators/app/templates/app/modules/home/launch-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.js.ejs
@@ -45,7 +45,7 @@ export default class LaunchScreen extends React.Component {
         <ScrollView contentInsetAdjustmentBehavior="automatic" style={styles.scrollView}>
           <View style={styles.centered}>
             <Image source={Images.logoJhipster} style={styles.logo} />
-            <Text style={styles.welcomeText}>{'Welcome to your Ignite JHipster app.'}</Text>
+            <Text style={styles.welcomeText}>{'Welcome to your JHipster React Native app.'}</Text>
           </View>
           <View style={styles.hairline} />
           {/* <Header /> */}
