--- a/generators/app/templates/app/shared/sagas/startup.saga.js.ejs
+++ b/generators/app/templates/app/shared/sagas/startup.saga.js.ejs
@@ -20,7 +20,7 @@ export function * startup (action) {
     const subObject = { a: 1, b: [1, 2, 3], c: true }
     subObject.circularDependency = subObject // osnap!
     console.tron.display({
-      name: '🔥 IGNITE 🔥',
+      name: '🔥 JHipster React Native 🔥',
       preview: 'You should totally expand this',
       value: {
         '💃': 'Welcome to the future!',
