--- a/templates/entity/entity-edit-screen.js.ejs
+++ b/templates/entity/entity-edit-screen.js.ejs
@@ -162,7 +162,7 @@ class <%= props.name %>EntityEditScreen extends React.Component {
     }
     return (
       <View style={styles.container}>
-        <KeyboardAwareScrollView  testID='<%= camelCase(props.name) %>EditScrollView'>
+        <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'} testID='<%= camelCase(props.name) %>EditScrollView'>
           <Form
             ref={c => {
               this.form = c
