lots of changes to fix tests
remove fs-jetpack dep
fix e2e tests
use this.fs everywhere possible for consistency
remove .yo-resolve thanks to this.fs
use master branch for node deps

--- a/generators/app/templates/.prettierrc.js.ejs
+++ b/generators/app/templates/.prettierrc.js.ejs
@@ -3,7 +3,7 @@ module.exports = {
   jsxBracketSameLine: true,
   singleQuote: true,
   trailingComma: 'all',
-  semi: false,
+  semi: true,
   printWidth: 140,
   tabWidth: 2,
   bracketSpacing: true,
