--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -3,6 +3,7 @@ const Utils = require('../utils')
 describe('Change Password Screen Tests', () => {
   const username = process.env.E2E_USERNAME || 'user';
   const password = process.env.E2E_PASSWORD || 'user';
+  const newPassword = process.env.E2E_NEW_PASSWORD || 'new-password';
 
   before(async () => {
     await device.reloadReactNative()
@@ -38,10 +39,10 @@ describe('Change Password Screen Tests', () => {
   })
 
   it('should display a popup on change password success', async () => {
-    await changePassword(password, 'new-password')
+    await changePassword(password, newPassword)
     await expect(element(by.text('Password changed'))).toBeVisible()
     await element(by.text('OK')).tap()
-    await changePassword('new-password', password)
+    await changePassword(newPassword, password)
     await expect(element(by.text('Password changed'))).toBeVisible()
     await element(by.text('OK')).tap()
   })
