--- a/generators/app/templates/.eslintrc.js.ejs
+++ b/generators/app/templates/.eslintrc.js.ejs
@@ -2,7 +2,7 @@ module.exports = {
   root: true,
   extends: ['@react-native-community', 'prettier'],
   rules: {
-    semi: [2, 'never'],
+    semi: [2, 'always'],
     quotes: [2, 'single', { avoidEscape: true }],
   },
   globals: {
