--- a/generators/app/templates/app/modules/account/register/register-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/register/register-screen.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { Alert, ScrollView, Text, TouchableHighlight } from 'react-native'
+import { Alert, Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
 import { Navigation } from 'react-native-navigation'
@@ -86,21 +86,19 @@ class RegisterScreen extends React.Component {
 
   render () {
     return (
-      <KeyboardAwareScrollView>
-        <ScrollView style={styles.container}>
-          <Form
-            ref={c => {
-              this.form = c
-            }}
-            type={this.state.accountModel}
-            options={this.state.options}
-            value={this.state.accountValue}
-            onChange={this.accountChange}
-          />
-          <TouchableHighlight style={styles.button} onPress={this.submitUpdate} underlayColor='#99d9f4'>
-            <Text style={styles.buttonText}>Register</Text>
-          </TouchableHighlight>
-        </ScrollView>
+      <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
+        <Form
+          ref={c => {
+            this.form = c
+          }}
+          type={this.state.accountModel}
+          options={this.state.options}
+          value={this.state.accountValue}
+          onChange={this.accountChange}
+        />
+        <TouchableHighlight style={styles.button} onPress={this.submitUpdate} underlayColor='#99d9f4'>
+          <Text style={styles.buttonText}>Register</Text>
+        </TouchableHighlight>
       </KeyboardAwareScrollView>
     )
   }
