--- a/templates/entity/entity-e2e-test.js.ejs
+++ b/templates/entity/entity-e2e-test.js.ejs
@@ -51,7 +51,10 @@ describe('<%= props.name %> Screen Tests', () => {
     await element(by.id('<%= field.fieldName %>Input')).replaceText('123')
       <%_ } _%>
     <%_ }) _%>
+    await Utils.closeKeyboard('<%= camelCase(props.name) %>EditScrollView')
+    await Utils.scrollTo('submitButton', '<%= camelCase(props.name) %>EditScrollView')
     await element(by.id('submitButton')).tap()
+    // view
     await element(by.text('View')).tap()
     <%_ props.entityConfig.fields.forEach((field, index) => {
       let tcombFieldType = 'String'
@@ -99,6 +102,8 @@ describe('<%= props.name %> Screen Tests', () => {
     await element(by.id('<%= field.fieldName %>Input')).replaceText('1234')
     <%_ } _%>
     <%_ }) _%>
+    await Utils.closeKeyboard('<%= camelCase(props.name) %>EditScrollView')
+    await Utils.scrollTo('submitButton', '<%= camelCase(props.name) %>EditScrollView')
     await element(by.id('submitButton')).tap()
     await element(by.text('OK')).tap()
     <%_ props.entityConfig.fields.forEach((field, index) => {
