--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -51,6 +51,16 @@ const ApplicationStyles = {
       alignItems: 'center',
       textAlign: 'center',
     },
+    button: {
+      height: 36,
+      backgroundColor: Colors.jhipsterBlue,
+      borderColor: Colors.jhipsterBlue,
+      borderWidth: 1,
+      borderRadius: 8,
+      alignSelf: 'stretch',
+      justifyContent: 'center',
+      marginBottom: 20,
+    }
   },
   darkLabelContainer: {
     padding: Metrics.smallMargin,
