--- a/generators/entity/templates/entity-e2e-test.js.ejs
+++ b/generators/entity/templates/entity-e2e-test.js.ejs
@@ -51,9 +51,10 @@ describe('<%= name %> Screen Tests', () => {
     await element(by.id('<%= field.fieldName %>Input')).replaceText('123')
       <%_ } _%>
     <%_ }) _%>
-    // close the keyboard
-    await element(by.id('<%= camelCaseName %>EditScrollView')).tap()
+    await Utils.closeKeyboard('<%= camelCaseName %>EditScrollView')
+    await Utils.scrollTo('submitButton', '<%= camelCaseName %>EditScrollView')
     await element(by.id('submitButton')).tap()
+    // view
     await element(by.text('View')).tap()
     <%_ entityInfo.fields.forEach((field, index) => {
       let tcombFieldType = 'String'
@@ -101,8 +102,8 @@ describe('<%= name %> Screen Tests', () => {
     await element(by.id('<%= field.fieldName %>Input')).replaceText('1234')
     <%_ } _%>
     <%_ }) _%>
-    // close the keyboard
-    await element(by.id('<%= camelCaseName %>EditScrollView')).tap()
+    await Utils.closeKeyboard('<%= camelCaseName %>EditScrollView')
+    await Utils.scrollTo('submitButton', '<%= camelCaseName %>EditScrollView')
     await element(by.id('submitButton')).tap()
     await element(by.text('OK')).tap()
     <%_ entityInfo.fields.forEach((field, index) => {
