expo app generation pt 1
disabled tcomb form native

--- a/generators/app/templates/app/modules/account/password-reset/forgot-password.sagas.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password.sagas.js.ejs
@@ -7,10 +7,10 @@ export function * forgotPassword (api, { email }) {
   const response = yield call(api.forgotPassword, email)
   // success?
   if (response.ok) {
-    console.tron.log('ForgotPasswordRequest - OK')
+    console.log('ForgotPasswordRequest - OK')
     yield put(ForgotPasswordActions.forgotPasswordSuccess(response.data))
   } else {
-    console.tron.log('ForgotPassword - FAIL')
+    console.log('ForgotPassword - FAIL')
     yield put(ForgotPasswordActions.forgotPasswordFailure((response.data && response.data.title) || 'Something when wrong resetting your password'))
   }
 }
