--- a/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password-screen.js.ejs
@@ -2,16 +2,14 @@ import React from 'react'
 import { Alert, Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
-import t from 'tcomb-form-native'
 
 import ChangePasswordActions from '../password/change-password.reducer'
 import styles from './change-password-screen.styles'
 
-const Form = t.form.Form
-
 class ChangePasswordScreen extends React.Component {
   constructor (props) {
     super(props)
+/*
     this.state = {
       formModel: t.struct({
         currentPassword: t.String,
@@ -42,6 +40,7 @@ class ChangePasswordScreen extends React.Component {
         }
       },
     }
+*/
     this.submitForm = this.submitForm.bind(this)
     this.formChange = this.formChange.bind(this)
   }
@@ -77,15 +76,15 @@ class ChangePasswordScreen extends React.Component {
   render () {
     return (
       <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        <Form
-          ref={c => {
-            this.form = c
-          }}
-          type={this.state.formModel}
-          options={this.state.formOptions}
-          value={this.state.formValue}
-          onChange={this.formChange}
-        />
+        {/*<Form*/}
+        {/*  ref={(c) => {*/}
+        {/*    this.form = c;*/}
+        {/*  }}*/}
+        {/*  type={this.state.formModel}*/}
+        {/*  options={this.state.formOptions}*/}
+        {/*  value={this.state.formValue}*/}
+        {/*  onChange={this.formChange}*/}
+        {/*/>*/}
         <TouchableHighlight testID='changePasswordSubmitButton' style={styles.button} onPress={this.submitForm} underlayColor='#99d9f4'>
           <Text style={styles.buttonText}>Save</Text>
         </TouchableHighlight>
