--- a/generators/app/templates/app/modules/account/password/change-password.sagas.js.ejs
+++ b/generators/app/templates/app/modules/account/password/change-password.sagas.js.ejs
@@ -9,10 +9,10 @@ export function * changePassword (api, { currentPassword, newPassword }) {
   const response = yield call(callApi, apiCall)
   // success?
   if (response.ok) {
-    console.tron.log('ChangePasswordRequest - OK')
+    console.log('ChangePasswordRequest - OK')
     yield put(ChangePasswordActions.changePasswordSuccess())
   } else {
-    console.tron.log('ChangePassword - FAIL')
+    console.log('ChangePassword - FAIL')
     yield put(ChangePasswordActions.changePasswordFailure((response.data && response.data.title) || 'Failed to change password'))
   }
 }
