--- a/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/settings/settings-screen.js.ejs
@@ -2,17 +2,15 @@ import React from 'react'
 import { Alert, Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
-import t from 'tcomb-form-native'
 
 import AccountActions from '../../../shared/reducers/account.reducer'
 // Styles
 import styles from './settings-screen.styles'
 
-const Form = t.form.Form
-
 class SettingsScreen extends React.Component {
   constructor (props) {
     super(props)
+/*
     this.state = {
       accountModel: t.struct({
         firstName: t.maybe(t.String),
@@ -52,6 +50,7 @@ class SettingsScreen extends React.Component {
         }
       },
     }
+*/
     this.submitUpdate = this.submitUpdate.bind(this)
     this.accountChange = this.accountChange.bind(this)
   }
@@ -84,15 +83,15 @@ class SettingsScreen extends React.Component {
   render () {
     return (
       <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        <Form
-          ref={c => {
-            this.form = c
-          }}
-          type={this.state.accountModel}
-          options={this.state.options}
-          value={this.state.accountValue}
-          onChange={this.accountChange}
-        />
+        {/*<Form*/}
+        {/*  ref={(c) => {*/}
+        {/*    this.form = c;*/}
+        {/*  }}*/}
+        {/*  type={this.state.accountModel}*/}
+        {/*  options={this.state.options}*/}
+        {/*  value={this.state.accountValue}*/}
+        {/*  onChange={this.accountChange}*/}
+        {/*/>*/}
         <TouchableHighlight testID='settingsSubmitButton' style={styles.button} onPress={this.submitUpdate} underlayColor='#99d9f4'>
           <Text style={styles.buttonText}>Save</Text>
         </TouchableHighlight>
