--- a/generators/app/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/app/templates/app/shared/reducers/create-store.js.ejs
@@ -1,6 +1,5 @@
 import { createStore, applyMiddleware, compose } from 'redux'
 import createSagaMiddleware from 'redux-saga'
-import Reactotron from 'reactotron-react-native'
 
 import RehydrationServices from '../services/rehydration.service'
 import ReduxPersist from '../../config/redux-persist'
@@ -17,7 +16,7 @@ export default (rootReducer, rootSaga) => {
 
   /* ------------- Saga Middleware ------------- */
 
-  const sagaMonitor = Config.useReactotron ? console.tron.createSagaMonitor() : null
+  const sagaMonitor = null;
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
   <%_ if (websocket) { _%>
@@ -29,10 +28,6 @@ export default (rootReducer, rootSaga) => {
 
   enhancers.push(applyMiddleware(...middleware))
 
-  // if Reactotron is enabled (default for __DEV__), we'll create the store through Reactotron
-  if (Config.useReactotron) {
-    enhancers.push(Reactotron.createEnhancer())
-  }
   const store = createStore(rootReducer, compose(...enhancers))
 
   // configure persistStore and check reducer version number
