--- a/generators/app/templates/app/shared/themes/images.js.ejs
+++ b/generators/app/templates/app/shared/themes/images.js.ejs
@@ -6,7 +6,7 @@ const images = {
   logoJhipsterDrinkCoffee: require('../images/logo-jhipster-drink-coffee.png'),
   ready: require('../images/your-app.png'),
   chevronLeftIcon: require('../images/chevron-left.png'),
-  menuIcon: require('../images/bars.png'),
+  toggleDrawerIcon: require('../images/toggle-drawer-icon/toggle-drawer-icon.png'),
   background: require('../images/bg.png')
 }
 
