--- a/generators/app/templates/app/shared/util/immutable-persistence-transform.js.ejs
+++ b/generators/app/templates/app/shared/util/immutable-persistence-transform.js.ejs
@@ -1,14 +1,14 @@
-import R from 'ramda'
+import { has, when } from 'ramda';
 import Immutable from 'seamless-immutable'
 
 // is this object already Immutable?
-const isImmutable = R.has('asMutable')
+const isImmutable = has('asMutable')
 
 // change this Immutable object into a JS object
 const convertToJs = (state) => state.asMutable({ deep: true })
 
 // optionally convert this object into a JS object if it is Immutable
-const fromImmutable = R.when(isImmutable, convertToJs)
+const fromImmutable = when(isImmutable, convertToJs)
 
 // convert this JS object into an Immutable object
 const toImmutable = (raw) => Immutable(raw)
