--- a/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
+++ b/generators/app/templates/app/modules/account/password-reset/forgot-password-screen.js.ejs
@@ -2,18 +2,15 @@ import React from 'react'
 import { Alert, Text, TouchableHighlight } from 'react-native'
 import { connect } from 'react-redux'
 import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
-import { Navigation } from 'react-native-navigation'
-import t from 'tcomb-form-native'
 
 import ForgotPasswordActions from './forgot-password.reducer'
 import styles from './forgot-password-screen.styles'
 
-const Form = t.form.Form
 
 class ForgotPasswordScreen extends React.Component {
   constructor (props) {
     super(props)
-    Navigation.events().bindComponent(this)
+/*
     this.state = {
       formModel: t.struct({
         email: t.String
@@ -26,6 +23,7 @@ class ForgotPasswordScreen extends React.Component {
         }
       },
     }
+*/
     this.submitForm = this.submitForm.bind(this)
     this.formChange = this.formChange.bind(this)
   }
@@ -44,7 +42,8 @@ class ForgotPasswordScreen extends React.Component {
         Alert.alert('Error', this.props.error, [{ text: 'OK' }])
       } else {
         Alert.alert('Success', 'Password reset email sent', [{ text: 'OK' }])
-        Navigation.popToRoot(this.props.componentId)
+        // todo go back on success
+        // Navigation.popToRoot(this.props.componentId)
       }
     }
   }
@@ -58,15 +57,15 @@ class ForgotPasswordScreen extends React.Component {
   render () {
     return (
       <KeyboardAwareScrollView style={styles.container} keyboardShouldPersistTaps={'handled'}>
-        <Form
-          ref={c => {
-            this.form = c
-          }}
-          type={this.state.formModel}
-          options={this.state.formOptions}
-          value={this.state.formValue}
-          onChange={this.formChange}
-        />
+        {/*<Form*/}
+        {/*  ref={(c) => {*/}
+        {/*    this.form = c;*/}
+        {/*  }}*/}
+        {/*  type={this.state.formModel}*/}
+        {/*  options={this.state.formOptions}*/}
+        {/*  value={this.state.formValue}*/}
+        {/*  onChange={this.formChange}*/}
+        {/*/>*/}
         <TouchableHighlight style={styles.button} onPress={this.submitForm} underlayColor='#99d9f4'>
           <Text style={styles.buttonText}>Reset</Text>
         </TouchableHighlight>
