--- a/generators/app/templates/app/modules/account/register/register.sagas.js.ejs
+++ b/generators/app/templates/app/modules/account/register/register.sagas.js.ejs
@@ -7,10 +7,10 @@ export function * register (api, { user }) {
   const response = yield call(api.register, user)
   // success?
   if (response.ok) {
-    console.tron.log('Register - OK')
+    console.log('Register - OK')
     yield put(RegisterActions.registerSuccess())
   } else {
-    console.tron.log('Register - FAIL')
+    console.log('Register - FAIL')
     yield put(RegisterActions.registerFailure((response.data && response.data.title) || 'Registration failed'))
   }
 }
