--- a/generators/app/templates/app/modules/home/launch-screen.js.ejs
+++ b/generators/app/templates/app/modules/home/launch-screen.js.ejs
@@ -1,7 +1,5 @@
 import React from 'react'
 import { ScrollView, Text, Image, View, Platform } from 'react-native'
-import { DebugInstructions, ReloadInstructions } from 'react-native/Libraries/NewAppScreen'
-import { Navigation } from 'react-native-navigation'
 
 import LearnMoreLinks from './learn-more-links.component.js'
 import { Images } from '../../shared/themes'
@@ -10,28 +8,10 @@ import styles from './launch-screen.styles'
 export default class LaunchScreen extends React.Component {
   constructor (props) {
     super(props)
-    Navigation.events().bindComponent(this)
-  }
-
-  componentDidAppear () {
-    Navigation.mergeOptions(this.props.componentId, {
-      sideMenu: {
-        left: {
-          enabled: true,
-          visible: false
-        }
-      }
-    })
   }
 
   showSideMenu () {
-    Navigation.mergeOptions(this.props.componentId, {
-      sideMenu: {
-        left: {
-          visible: true
-        }
-      }
-    })
+    navigation.openDrawer()
   }
 
   navigationButtonPressed ({ buttonId }) {
@@ -55,31 +35,19 @@ export default class LaunchScreen extends React.Component {
             </View>
           )}
           <View style={styles.body}>
-            {Platform.OS === 'ios' ? null : (
+            {Platform.OS !== 'android' ? null : (
               <View style={styles.sectionContainer}>
-                <Text style={styles.sectionTitle}>Step Zero</Text>
+                <Text style={styles.sectionTitle}>Running on Android</Text>
                 <Text style={styles.sectionDescription}>
                   Run <Text style={styles.highlight}>adb reverse tcp:8080 tcp:8080</Text> to be able to connect to your JHipster backend (Android only).
                 </Text>
               </View>
             )}
             <View style={styles.sectionContainer}>
-              <Text style={styles.sectionTitle}>Step One</Text>
+              <Text style={styles.sectionTitle}>Make Some Changes</Text>
               <Text style={styles.sectionDescription}>
                 Edit <Text style={styles.highlight}>app/modules/home/launch-screen.js</Text> to
                 change this screen and then come back to see your edits.
-              </Text>
-            </View>
-            <View style={styles.sectionContainer}>
-              <Text style={styles.sectionTitle}>See Your Changes</Text>
-              <Text style={styles.sectionDescription}>
-                <ReloadInstructions />
-              </Text>
-            </View>
-            <View style={styles.sectionContainer}>
-              <Text style={styles.sectionTitle}>Debug</Text>
-              <Text style={styles.sectionDescription}>
-                <DebugInstructions />
               </Text>
             </View>
             <View style={styles.sectionContainer}>
