--- a/generators/app/templates/app/shared/websockets/websocket.service.js.ejs
+++ b/generators/app/templates/app/shared/websockets/websocket.service.js.ejs
@@ -29,7 +29,7 @@ function onConnect () {
   connected = true
 
   if (!initialConnect) {
-    console.tron.log('Resubscribing...')
+    console.log('Resubscribing...')
     Object.keys(subscriptions).forEach(function (key) {
       if (key === 'chat') {
         subscribeToChat()
@@ -69,7 +69,7 @@ function connect () {
     socket = new SockJS(url)
     stompClient = webstomp.over(socket)
     // stompClient.debug = null
-    console.tron.log(`Connecting to ${url}`)
+    console.log(`Connecting to ${url}`)
     var headers = {}
     stompClient.connect(headers, onConnect, onError)
     alreadyConnectedOnce = true
@@ -77,7 +77,7 @@ function connect () {
 }
 
 function disconnect () {
-  console.tron.log('Disconnecting')
+  console.log('Disconnecting')
   if (stompClient !== null && connected) {
     connectedPromise = null
     stompClient.disconnect()
@@ -89,7 +89,7 @@ function disconnect () {
 
 // methods for subscribing
 function subscribeToChat () {
-  console.tron.log('Subscribing to Chat')
+  console.log('Subscribing to Chat')
   if (!Object.prototype.hasOwnProperty.call(subscriptions, 'chat')) {
     subscriptions.chat = { subscribed: true }
     connection.then(() => {
@@ -152,7 +152,7 @@ function getWsSessionId () {
 function setWsSessionId (socketObject) {
   const splitUrl = socketObject._transport.url.split('/')
   wsSessionId = splitUrl[5]
-  console.tron.log(`Set WS Session ID to ${wsSessionId}`)
+  console.log(`Set WS Session ID to ${wsSessionId}`)
 }
 
 function getConnectedPromise () {
@@ -195,7 +195,7 @@ function initWebsocket () {
     em = emitter
     // unsubscribe function
     return () => {
-      console.tron.log('Socket off')
+      console.log('Socket off')
     }
   })
 }
