--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -1,24 +1,14 @@
 {
   "version": "0.0.1",
   "scripts": {
-    "clean": "rimraf $TMPDIR/react-* && watchman watch-del-all && npm cache clean --force",
-    "clean:android": "cd android/ && ./gradlew clean && cd .. && npx react-native run-android",
-    "newclear": "rimraf $TMPDIR/react-* && watchman watch-del-all && rimraf ios/build && rimraf node_modules/ && npm cache clean --force && npm i",
     "test:watch": "jest --watch",
     "updateSnapshot": "jest --updateSnapshot",
     "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html",
-    "android:build": "cd android && ./gradlew assembleRelease",
-    "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
-    "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
-    "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
-    "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
-    "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "lint": "eslint app test index.js --ext .js",
-    "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\"",
+    "lint": "eslint app test app.js --ext .js",
     <%_ if (!skipCommitHook) { _%>
     "precommit": "lint-staged",
     <%_ } _%>
-    "postinstall": "patch-package"
+    "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
   },
   "dependencies": {
     "@react-native-community/async-storage": "REPLACE_WITH_VERSION",
@@ -36,7 +26,6 @@
     "redux-persist": "REPLACE_WITH_VERSION",
     "redux-saga": "REPLACE_WITH_VERSION",
     "reduxsauce": "REPLACE_WITH_VERSION",
-    "react-native-navigation": "REPLACE_WITH_VERSION",
     "seamless-immutable": "REPLACE_WITH_VERSION",
     <%_ if (authType === 'session' || authType === 'uaa' || authType === 'oauth2') { _%>
     "@react-native-community/cookies": "REPLACE_WITH_VERSION",
@@ -46,7 +35,17 @@
     "sockjs-client": "REPLACE_WITH_VERSION",
     "net": "REPLACE_WITH_VERSION",
     <%_ } _%>
-    "tcomb-form-native": "REPLACE_WITH_VERSION"
+    "@react-native-community/masked-view": "REPLACE_WITH_VERSION",
+    "@react-navigation/drawer": "REPLACE_WITH_VERSION",
+    "@react-navigation/stack": "REPLACE_WITH_VERSION",
+    "@react-navigation/native": "REPLACE_WITH_VERSION",
+    "@react-navigation/devtools":"REPLACE_WITH_VERSION",
+    "react-native-gesture-handler": "REPLACE_WITH_VERSION",
+    "react-native-reanimated": "REPLACE_WITH_VERSION",
+    "react-native-safe-area-context": "REPLACE_WITH_VERSION",
+    "react-native-screens": "REPLACE_WITH_VERSION",
+    "react-native-web": "REPLACE_WITH_VERSION",
+    "@expo/vector-icons":"REPLACE_WITH_VERSION"
   },
   "devDependencies": {
     "@storybook/addons": "REPLACE_WITH_VERSION",
@@ -72,10 +71,6 @@
     "mockery": "REPLACE_WITH_VERSION",
     "react-dom": "REPLACE_WITH_VERSION",
     "prettier": "REPLACE_WITH_VERSION",
-    "reactotron-react-native": "REPLACE_WITH_VERSION",
-    "reactotron-redux": "REPLACE_WITH_VERSION",
-    "reactotron-redux-saga": "REPLACE_WITH_VERSION",
-    "patch-package": "REPLACE_WITH_VERSION",
     "rimraf": "REPLACE_WITH_VERSION"
   },
   <%_ if (!skipCommitHook) { _%>
@@ -106,7 +101,7 @@
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(@react-native-community|tcomb-form-native|react-native))"
+      "node_modules/(?!(@react-native-community|react-native))"
     ],
     "coveragePathIgnorePatterns": [
       "app/shared/services/api.js",
