--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -1,7 +1,6 @@
 import React from 'react'
 import { ActivityIndicator, Alert, ScrollView, Text, View } from 'react-native'
 import { connect } from 'react-redux'
-import { Navigation } from 'react-native-navigation'
 import { <%= camelCaseName %>EntityEditScreen } from '../../../navigation/layouts'
 <%_ if (entityContainsLocalDate) { _%>
 import { jsDateToLocalDate } from '../../../shared/util/date-transforms'
@@ -14,7 +13,6 @@ import styles from './<%= kebabCaseName %>-entity-detail-screen-style'
 class <%= name %>EntityDetailScreen extends React.Component {
   constructor (props) {
     super(props)
-    Navigation.events().bindComponent(this)
     this.props.get<%= name %>(this.props.data.entityId)
   }
 
@@ -24,7 +22,8 @@ class <%= name %>EntityDetailScreen extends React.Component {
         Alert.alert('Error', 'Something went wrong deleting the entity', [{ text: 'OK' }])
       } else {
         this.props.reset<%= pluralName %>()
-        Navigation.pop(this.props.componentId)
+        // todo pop
+        // Navigation.pop(this.props.componentId)
       }
     }
   }
